cmake_minimum_required(VERSION 3.5)
project("muiplus")

set(SOURCES_MUIPLUS
        "src/CMUI_Notify.cpp"
        "src/CMUI_Object.cpp"
        "src/CMUI_Application.cpp"
        "src/CMUI_Window.cpp"
        "src/CMUI_Area.cpp"
        "src/CMUI_Text.cpp"
        "src/CMUI_Family.cpp"
        "src/CMUI_Menustrip.cpp"
        "src/CMUI_Menu.cpp"
        "src/CMUI_Menuitem.cpp"
        "src/CMUI_Aboutmui.cpp"
        "src/CMUI_Rectangle.cpp"
        "src/CMUI_Balance.cpp"
        "src/CMUI_Image.cpp"
        "src/CMUI_Bitmap.cpp"
        "src/CMUI_Bodychunk.cpp"
        "src/CMUI_Gadget.cpp"
        "src/CMUI_String.cpp"
        "src/CMUI_Boopsi.cpp"
        "src/CMUI_Prop.cpp"
        "src/CMUI_Gauge.cpp"
        "src/CMUI_Scale.cpp"
        "src/CMUI_Colorfield.cpp"
        "src/CMUI_List.cpp"
        "src/CMUI_Floattext.cpp"
        "src/CMUI_Volumelist.cpp"
        "src/CMUI_Scrmodelist.cpp"
        "src/CMUI_Dirlist.cpp"
        "src/CMUI_Numeric.cpp"
        "src/CMUI_Knob.cpp"
        "src/CMUI_Levelmeter.cpp"
        "src/CMUI_Numericbutton.cpp"
        "src/CMUI_Slider.cpp"
        "src/CMUI_Pendisplay.cpp"
        "src/CMUI_Poppen.cpp"
        "src/CMUI_Group.cpp"
        "src/CMUI_Mccprefs.cpp"
        "src/CMUI_Register.cpp"
        "src/CMUI_Penadjust.cpp"
        "src/CMUI_Settingsgroup.cpp"
        "src/CMUI_Settings.cpp"
        "src/CMUI_Virtgroup.cpp"
        "src/CMUI_Scrollgroup.cpp"
        "src/CMUI_Scrollbar.cpp"
        "src/CMUI_Listview.cpp"
        "src/CMUI_Radio.cpp"
        "src/CMUI_Cycle.cpp"
        "src/CMUI_Coloradjust.cpp"
        "src/CMUI_Palette.cpp"
        "src/CMUI_Popstring.cpp"
        "src/CMUI_Popobject.cpp"
        "src/CMUI_Poplist.cpp"
        "src/CMUI_Popscreen.cpp"
        "src/CMUI_Popasl.cpp"
        "src/CMUI_Semaphore.cpp"
        "src/CMUI_Dataspace.cpp"
        "src/CMUI_Configdata.cpp"
        "src/CMUI_Label.cpp"
        "src/CMUI_Checkmark.cpp"
        "src/CMUI_Button.cpp"
        "src/CMUI_HSpace.cpp"
        "src/CMUI_VSpace.cpp"
        "src/CMUI_HBar.cpp"
        "src/CMUI_VBar.cpp"
        "src/CMUI_BarTitle.cpp"
        "src/CMUI_HGroup.cpp"
        "src/CTMUI_List.cpp"
        "src/CTMUI_Listview.cpp"
      #  "src/CMUI_HTMLtext.cpp"
        "src/CMUI_NList.cpp"
        "src/CMUI_NListview.cpp"
        "src/CTMUI_NList.cpp"
        "src/CTMUI_NListview.cpp"
        )

set(HEADER_MUIPLUS
        "src/mui_declarations.hpp"
        "src/include/CMUI_Notify.h"
        "src/include/CMUI_Object.h"
        "src/include/CMUI_Application.h"
        "src/include/CMUI_Window.h"
        "src/include/CMUI_Area.h"
        "src/include/CMUI_Text.h"
        "src/include/CMUI_Family.h"
        "src/include/CMUI_Menustrip.h"
        "src/include/CMUI_Menu.h"
        "src/include/CMUI_Menuitem.h"
        "src/include/CMUI_Aboutmui.h"
        "src/include/CMUI_Rectangle.h"
        "src/include/CMUI_Balance.h"
        "src/include/CMUI_Image.h"
        "src/include/CMUI_Bitmap.h"
        "src/include/CMUI_Bodychunk.h"
        "src/include/CMUI_Gadget.h"
        "src/include/CMUI_String.h"
        "src/include/CMUI_Boopsi.h"
        "src/include/CMUI_Prop.h"
        "src/include/CMUI_Gauge.h"
        "src/include/CMUI_Scale.h"
        "src/include/CMUI_Colorfield.h"
        "src/include/CMUI_List.h"
        "src/include/CMUI_Floattext.h"
        "src/include/CMUI_Volumelist.h"
        "src/include/CMUI_Scrmodelist.h"
        "src/include/CMUI_Dirlist.h"
        "src/include/CMUI_Numeric.h"
        "src/include/CMUI_Knob.h"
        "src/include/CMUI_Levelmeter.h"
        "src/include/CMUI_Numericbutton.h"
        "src/include/CMUI_Slider.h"
        "src/include/CMUI_Pendisplay.h"
        "src/include/CMUI_Poppen.h"
        "src/include/CMUI_Group.h"
        "src/include/CMUI_Mccprefs.h"
        "src/include/CMUI_Register.h"
        "src/include/CMUI_Penadjust.h"
        "src/include/CMUI_Settingsgroup.h"
        "src/include/CMUI_Settings.h"
        "src/include/CMUI_Virtgroup.h"
        "src/include/CMUI_Scrollgroup.h"
        "src/include/CMUI_Scrollbar.h"
        "src/include/CMUI_Listview.h"
        "src/include/CMUI_Radio.h"
        "src/include/CMUI_Cycle.h"
        "src/include/CMUI_Coloradjust.h"
        "src/include/CMUI_Palette.h"
        "src/include/CMUI_Popstring.h"
        "src/include/CMUI_Popobject.h"
        "src/include/CMUI_Poplist.h"
        "src/include/CMUI_Popscreen.h"
        "src/include/CMUI_Popasl.h"
        "src/include/CMUI_Semaphore.h"
        "src/include/CMUI_Dataspace.h"
        "src/include/CMUI_Configdata.h"
        "src/include/CMUI_Label.h"
        "src/include/CMUI_Checkmark.h"
        "src/include/CMUI_Button.h"
        "src/include/CMUI_HSpace.h"
        "src/include/CMUI_VSpace.h"
        "src/include/CMUI_HBar.h"
        "src/include/CMUI_VBar.h"
        "src/include/CMUI_BarTitle.h"
        "src/include/CMUI_HGroup.h"
        "src/include/CTMUI_List.h"
        "src/include/CTMUI_Listview.h"
      #  "src/include/CMUI_HTMLtext.h"
        "src/include/CMUI_NList.h"
        "src/include/CMUI_NListview.h"
        "src/include/CTMUI_NList.h"
        "src/include/CTMUI_NListview.h"
        src/CMUI_Class.cpp src/include/CMUI_Class.h src/CMUI_VGroup.cpp src/include/CMUI_VGroup.h)

add_library(muiplus STATIC ${SOURCES_MUIPLUS} ${HEADER_MUIPLUS})
