cmake_minimum_required(VERSION 3.5)
project("muiplus")

set(SOURCES_MUIPLUS
        "src/Notify.cpp"
        "src/ZuneObject.cpp"
        "src/Application.cpp"
        "src/Window.cpp"
        "src/Area.cpp"
        "src/Text.cpp"
        "src/Family.cpp"
        "src/Menustrip.cpp"
        "src/Menu.cpp"
        "src/Menuitem.cpp"
        "src/Aboutmui.cpp"
        "src/Rectangle.cpp"
        "src/Balance.cpp"
        "src/Image.cpp"
        "src/Bitmap.cpp"
        "src/Bodychunk.cpp"
        "src/String.cpp"
        "src/Boopsi.cpp"
        "src/Prop.cpp"
        "src/Gauge.cpp"
        "src/Scale.cpp"
        "src/Colorfield.cpp"
        "src/ZuneList.cpp"
        "src/Floattext.cpp"
        "src/Volumelist.cpp"
        "src/Dirlist.cpp"
        "src/Numeric.cpp"
        "src/Knob.cpp"
        "src/Levelmeter.cpp"
        "src/Numericbutton.cpp"
        "src/Slider.cpp"
        "src/Pendisplay.cpp"
        "src/Poppen.cpp"
        "src/Group.cpp"
        "src/Mccprefs.cpp"
        "src/Register.cpp"
        "src/Penadjust.cpp"
        "src/Settingsgroup.cpp"
        "src/Settings.cpp"
        "src/Virtgroup.cpp"
        "src/Scrollgroup.cpp"
        "src/Scrollbar.cpp"
        "src/Listview.cpp"
        "src/Radio.cpp"
        "src/Cycle.cpp"
        "src/Coloradjust.cpp"
        "src/Palette.cpp"
        "src/Popstring.cpp"
        "src/Popobject.cpp"
        "src/Poplist.cpp"
        "src/Popscreen.cpp"
        "src/Popasl.cpp"
        "src/Semaphore.cpp"
        "src/Dataspace.cpp"
        "src/Configdata.cpp"
        "src/Checkmark.cpp"
        "src/Button.cpp"
        "src/BarTitle.cpp"
        "src/ZuneList.cpp"
        "src/Listview.cpp"
        "src/HTMLtext.cpp"
        "src/NList.cpp"
        "src/NListview.cpp"
        "src/NList.cpp"
        "src/NListview.cpp"
        )

set(HEADER_MUIPLUS
        "src/mui_declarations.hpp"
        "src/include/Notify.h"
        "src/include/ZuneObject.h"
        "src/include/Application.h"
        "src/include/Window.h"
        "src/include/Area.h"
        "src/include/Text.h"
        "src/include/Family.h"
        "src/include/Menustrip.h"
        "src/include/Menu.h"
        "src/include/Menuitem.h"
        "src/include/Aboutmui.h"
        "src/include/Rectangle.h"
        "src/include/Balance.h"
        "src/include/Image.h"
        "src/include/Bitmap.h"
        "src/include/Bodychunk.h"
        "src/include/String.h"
        "src/include/Boopsi.h"
        "src/include/Prop.h"
        "src/include/Gauge.h"
        "src/include/Scale.h"
        "src/include/Colorfield.h"
        "src/include/ZuneList.h"
        "src/include/Floattext.h"
        "src/include/Volumelist.h"
        "src/include/Dirlist.h"
        "src/include/Numeric.h"
        "src/include/Knob.h"
        "src/include/Levelmeter.h"
        "src/include/Numericbutton.h"
        "src/include/Slider.h"
        "src/include/Pendisplay.h"
        "src/include/Poppen.h"
        "src/include/Group.h"
        "src/include/Mccprefs.h"
        "src/include/Register.h"
        "src/include/Penadjust.h"
        "src/include/Settingsgroup.h"
        "src/include/Settings.h"
        "src/include/Virtgroup.h"
        "src/include/Scrollgroup.h"
        "src/include/Scrollbar.h"
        "src/include/Listview.h"
        "src/include/Radio.h"
        "src/include/Cycle.h"
        "src/include/Coloradjust.h"
        "src/include/Palette.h"
        "src/include/Popstring.h"
        "src/include/Popobject.h"
        "src/include/Poplist.h"
        "src/include/Popscreen.h"
        "src/include/Popasl.h"
        "src/include/Semaphore.h"
        "src/include/Dataspace.h"
        "src/include/Configdata.h"
        "src/include/Checkmark.h"
        "src/include/Button.h"
        "src/include/BarTitle.h"
        "src/include/ZuneList.h"
        "src/include/Listview.h"
        "src/include/HTMLtext.h"
        "src/include/NList.h"
        "src/include/NListview.h"
        "src/include/NList.h"
        "src/include/NListview.h"
        )

add_library(muiplus STATIC ${SOURCES_MUIPLUS} ${HEADER_MUIPLUS})

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_include_directories(muiplus PUBLIC "/usr/include/axrt")
    target_link_libraries(muiplus muimaster mui)
endif()
