cmake_minimum_required(VERSION 3.5)
project("zune")

set(SOURCES_MUIPLUS
        "src/zuneclass/Notify.cpp"
        "src/zuneclass/RootClass.cpp"
        "src/zuneclass/Application.cpp"
        "src/zuneclass/Window.cpp"
        "src/zuneclass/Area.cpp"
        "src/zuneclass/Text.cpp"
        "src/zuneclass/Family.cpp"
        "src/zuneclass/Menustrip.cpp"
        "src/zuneclass/Menu.cpp"
        "src/zuneclass/Menuitem.cpp"
        "src/zuneclass/Aboutmui.cpp"
        "src/zuneclass/Rectangle.cpp"
        "src/zuneclass/Balance.cpp"
        "src/zuneclass/Image.cpp"
        "src/zuneclass/Bitmap.cpp"
        "src/zuneclass/Bodychunk.cpp"
        "src/zuneclass/String.cpp"
        "src/zuneclass/Boopsi.cpp"
        "src/zuneclass/Prop.cpp"
        "src/zuneclass/Gauge.cpp"
        "src/zuneclass/Scale.cpp"
        "src/zuneclass/Colorfield.cpp"
        "src/zuneclass/ZuneList.cpp"
        "src/zuneclass/Floattext.cpp"
        "src/zuneclass/Volumelist.cpp"
        "src/zuneclass/Dirlist.cpp"
        "src/zuneclass/Numeric.cpp"
        "src/zuneclass/Knob.cpp"
        "src/zuneclass/Levelmeter.cpp"
        "src/zuneclass/Numericbutton.cpp"
        "src/zuneclass/Slider.cpp"
        "src/zuneclass/Pendisplay.cpp"
        "src/zuneclass/Poppen.cpp"
        "src/zuneclass/Group.cpp"
        "src/zuneclass/Mccprefs.cpp"
        "src/zuneclass/Register.cpp"
        "src/zuneclass/Penadjust.cpp"
        "src/zuneclass/Settingsgroup.cpp"
        "src/zuneclass/Settings.cpp"
        "src/zuneclass/Virtgroup.cpp"
        "src/zuneclass/Scrollgroup.cpp"
        "src/zuneclass/Scrollbar.cpp"
        "src/zuneclass/Listview.cpp"
        "src/zuneclass/Radio.cpp"
        "src/zuneclass/Cycle.cpp"
        "src/zuneclass/Coloradjust.cpp"
        "src/zuneclass/Palette.cpp"
        "src/zuneclass/Popstring.cpp"
        "src/zuneclass/Popobject.cpp"
        "src/zuneclass/Poplist.cpp"
        "src/zuneclass/Popscreen.cpp"
        "src/zuneclass/Popasl.cpp"
        "src/zuneclass/Semaphore.cpp"
        "src/zuneclass/Dataspace.cpp"
        "src/zuneclass/Configdata.cpp"
        "src/zuneclass/ZuneList.cpp"
        "src/zuneclass/Listview.cpp"
        "src/zuneclass/HTMLtext.cpp"
        "src/zuneclass/NList.cpp"
        "src/zuneclass/NListview.cpp"
        "src/zuneclass/NList.cpp"
        "src/zuneclass/NListview.cpp"
        )

set(HEADER_MUIPLUS
        "src/mui_declarations.hpp"
        "src/zuneclass/include/Notify.h"
        "src/zuneclass/include/RootClass.h"
        "src/zuneclass/include/Application.h"
        "src/zuneclass/include/Window.h"
        "src/zuneclass/include/Area.h"
        "src/zuneclass/include/Text.h"
        "src/zuneclass/include/Family.h"
        "src/zuneclass/include/Menustrip.h"
        "src/zuneclass/include/Menu.h"
        "src/zuneclass/include/Menuitem.h"
        "src/zuneclass/include/Aboutmui.h"
        "src/zuneclass/include/Rectangle.h"
        "src/zuneclass/include/Balance.h"
        "src/zuneclass/include/Image.h"
        "src/zuneclass/include/Bitmap.h"
        "src/zuneclass/include/Bodychunk.h"
        "src/zuneclass/include/String.h"
        "src/zuneclass/include/Boopsi.h"
        "src/zuneclass/include/Prop.h"
        "src/zuneclass/include/Gauge.h"
        "src/zuneclass/include/Scale.h"
        "src/zuneclass/include/Colorfield.h"
        "src/zuneclass/include/ZuneList.h"
        "src/zuneclass/include/Floattext.h"
        "src/zuneclass/include/Volumelist.h"
        "src/zuneclass/include/Dirlist.h"
        "src/zuneclass/include/Numeric.h"
        "src/zuneclass/include/Knob.h"
        "src/zuneclass/include/Levelmeter.h"
        "src/zuneclass/include/Numericbutton.h"
        "src/zuneclass/include/Slider.h"
        "src/zuneclass/include/Pendisplay.h"
        "src/zuneclass/include/Poppen.h"
        "src/zuneclass/include/Group.h"
        "src/zuneclass/include/Mccprefs.h"
        "src/zuneclass/include/Register.h"
        "src/zuneclass/include/Penadjust.h"
        "src/zuneclass/include/Settingsgroup.h"
        "src/zuneclass/include/Settings.h"
        "src/zuneclass/include/Virtgroup.h"
        "src/zuneclass/include/Scrollgroup.h"
        "src/zuneclass/include/Scrollbar.h"
        "src/zuneclass/include/Listview.h"
        "src/zuneclass/include/Radio.h"
        "src/zuneclass/include/Cycle.h"
        "src/zuneclass/include/Coloradjust.h"
        "src/zuneclass/include/Palette.h"
        "src/zuneclass/include/Popstring.h"
        "src/zuneclass/include/Popobject.h"
        "src/zuneclass/include/Poplist.h"
        "src/zuneclass/include/Popscreen.h"
        "src/zuneclass/include/Popasl.h"
        "src/zuneclass/include/Semaphore.h"
        "src/zuneclass/include/Dataspace.h"
        "src/zuneclass/include/Configdata.h"
        "src/zuneclass/include/ZuneList.h"
        "src/zuneclass/include/Listview.h"
        "src/zuneclass/include/HTMLtext.h"
        "src/zuneclass/include/NList.h"
        "src/zuneclass/include/NListview.h"
        "src/zuneclass/include/NList.h"
        "src/zuneclass/include/NListview.h"
        )

set(ZUNEOBJECT_SOURCES "src/zuneobject/Button.h"
        "src/zuneobject/Button.cpp"
        "src/zuneobject/Checkmark.cpp"
        "src/zuneobject/Checkmark.h"
        "src/zuneobject/Cycle.h"
        "src/zuneobject/Cycle.cpp"
        "src/zuneobject/HorizontalGroup.h"
        "src/zuneobject/HorizontalGroup.cpp"
        "src/zuneobject/RootObject.h"
        "src/zuneobject/VerticalGroup.h"
        "src/zuneobject/VerticalGroup.cpp"
        src/zuneobject/Window.cpp src/zuneobject/Window.h)

add_library(zune STATIC ${SOURCES_MUIPLUS} ${HEADER_MUIPLUS} ${ZUNEOBJECT_SOURCES})

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_include_directories(zune PUBLIC "/usr/include/axrt")
    target_link_libraries(zune muimaster mui)
endif()